Fixed a messages overflow issue

--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -31,6 +31,7 @@
 
   .thumbnail {
     height: 200px;
+    overflow: hidden;
   }
 
   .thumbnail:hover {
